# podium

./: .gitignore  .zenodo.json  CITATION.cff  CLAUDE-issue.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  compcert.yml  eva.yml  pages.yml  reach.yml  release.yml  tier2.yml  validate.yml
docs/: architecture.md  certified-scvx.md  comparative-analysis.md  fault-coverage.md  numerical-reproducibility.md  optimality-gap-certificates.md  roadmap.md  trajectory-optimization.md  verification.md  verified-optimization-ideas.md  visualization.md
docs/exact-arithmetic-certificates/: .gitignore  note.tex  references.bib
docs/paper/: .gitignore  main.tex  references.bib
docs/plans/: 01-nonlinear-truth-model.md  02-web-viewer.md  03-iss-sim-autopilot.md  04-arxiv-preprint.md  05-roe-module.md  07-sim-engine-spec-registry.md  08-layer0-convex.md  09-layer0-followups.md  10-arch-reachability.md  11-podium-gains-arch.md  12-layer0-residuals.md  13-v01-stragglers.md  14-relnav-ekf.md  15-sensors-actuators.md  16-attitude.md  17-idss-monte-carlo.md  18-viewer3d.md  19-build-numbers.md  20-sos-barriers.md  21-scp-core.md  22-stl-in-scp.md  23-tumbling-study.md  24-mujoco-contact.md  25-c-emitter.md  26-solvergen.md  27-emitter-v1.md  28-reference-mission.md  29-eva-gate.md  30-emitter-v2-ekf.md  31-release-audit-bundle.md  32-orekit-validation.md  33-sixdof-ptr.md  34-compcert-audit.md  35-viewer-frame-blending.md  36-cfs-integration.md  37-coremath.md  38-tier2-qemu.md  39-thruster-allocation.md  40-verified-kkt.md  41-verified-kkt-socp.md  (+13 more)
examples/: vbar_approach.py
examples/cfs_nav_app/: README.md  cfe_shim.c  cfe_shim.h  podium_kernels.c  podium_nav_app.c  podium_nav_app.h
paper/: main.tex  references.bib
src/podium/: __init__.py  constants.py
src/podium/control/: __init__.py  allocation.py  attitude.py  docking.py  lqr.py
src/podium/core/: __init__.py  cw.py  integrators.py  roe.py  ya.py
src/podium/dynamics/: __init__.py  attitude.py  disturbances.py  nonlinear.py
src/podium/emit/: __init__.py  cemit.py  cfsapp.py  croracle.py  evagen.py  kernels.py  solvergen.py
src/podium/guidance/: __init__.py  arch.py  convex.py  glideslope.py  safety.py  scp.py  sixdof.py  tumbling.py
src/podium/nav/: __init__.py  ekf.py  sensors.py
src/podium/sim/: __init__.py  contact.py  engine.py  idss.py  mission.py  monte_carlo.py  plots.py  spec.py
src/podium/verify/: __init__.py  barrier.py  bracket.py  contracts.py  kkt.py  lyapunov.py  scvx_cut.py  sos.py
src/podium/viz/: __init__.py
src/rpod/: __init__.py
src/rpod/control/: lqr.py
src/rpod/core/: __init__.py  cw.py  integrators.py  quat.py  ya.py
src/rpod/dynamics/: __init__.py
src/rpod/guidance/: __init__.py  glideslope.py
src/rpod/verify/: __init__.py  contracts.py
tests/: test_aero_torque.py  test_allocation.py  test_arch.py  test_attitude.py  test_attitude_analytic.py  test_barrier.py  test_bracket.py  test_cemit.py  test_cemit_coverage.py  test_certified_scvx.py  test_cfs_app.py  test_contact.py  test_convex.py  test_coremath.py  test_cw.py  test_disturbances.py  test_docking.py  test_ekf.py  test_fault_coverage.py  test_gravity_gradient.py  test_guidance_control.py  test_guidance_coverage.py  test_idss_mc.py  test_kkt.py  test_kkt_coverage.py  test_lyapunov.py  test_magnetic_torque.py  test_mission.py  test_navsim_coverage.py  test_nonlinear.py  test_orekit_validation.py  test_plots.py  test_quat.py  test_quaternion3axis_cone.py  test_quaternion_barrier.py  test_roe.py  test_scp.py  test_sensors.py  test_sim.py  test_sixdof.py  (+11 more)
tools/: build_audit_bundle.py  deploy_viewer.py  eva_gate.py  fault_coverage.py  fault_coverage_figure.py  mission_figure.py  ram_sweep.sh  recovery_figure.py  tier2_build_run.sh
tools/reach/: Manifest.toml  Project.toml  arch_rendezvous.jl
tools/ui/: sysid2_issim.py  sysid_issim.py  test_issim.py  test_viewer.py  test_viewer3d.py
viewer/: index.html
viewer/3d/: index.html
viewer/builds/: index.html  manifest.json
viewer/builds/b1/: 3d.html  index.html
viewer/iss-sim/: index.html
