[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podium-gnc"
version = "0.0.1"
description = "Podium: physics-precise RPOD (rendezvous, proximity operations & docking) GNC library, simulation sandbox, and visualization for LEO/MEO"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Adi Oltean" }]
keywords = [
    "spacecraft", "rendezvous", "docking", "GNC", "guidance",
    "trajectory-optimization", "clohessy-wiltshire", "simulation",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Trajectory optimization (convex / successive convexification)
opt = ["cvxpy>=1.4", "clarabel>=0.7"]
# Interactive 3-D visualization
viz = ["matplotlib>=3.7"]
# High-fidelity cross-validation against established astrodynamics stacks
validate = ["spiceypy>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy>=1.8",
    "ruff>=0.4",
    "hypothesis>=6.90",
    # Layer-0 guidance tests (tests skip gracefully if absent, but CI runs them)
    "cvxpy>=1.4",
    "clarabel>=0.7",
]

[project.urls]
Homepage = "https://github.com/adi-oltean/podium"
Issues = "https://github.com/adi-oltean/podium/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/podium"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "NPY", "PL"]
# The verifiable core deliberately favors explicit loops and scalar math
# over "pythonic" idioms, so silence complexity nags there.
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# UI test harnesses embed JavaScript snippets whose lines don't wrap.
"tools/ui/*" = ["E501"]
# Convex-problem builders are naturally long constructors (one constraint
# family per block); splitting them harms readability.
"src/podium/guidance/convex.py" = ["PLR0912", "PLR0915"]

[tool.mypy]
strict = true
files = ["src/podium"]

# cvxpy ships py.typed with incomplete stubs (cp.norm/cp.sum/solve and the
# is_dcp(dpp=...) signature are missing); silence only those error classes
# in the one module that uses it. Everything else stays strict.
[[tool.mypy.overrides]]
module = "podium.guidance.convex"
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "call-arg", "no-any-return"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: multi-orbit truth-model propagations (deselect with -m 'not slow')",
]
