[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podium-gnc"
version = "0.0.1"
description = "Podium: physics-precise RPOD (rendezvous, proximity operations & docking) GNC library, simulation sandbox, and visualization for LEO/MEO"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Adi Oltean" }]
keywords = [
    "spacecraft", "rendezvous", "docking", "GNC", "guidance",
    "trajectory-optimization", "clohessy-wiltshire", "simulation",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Trajectory optimization (convex / successive convexification)
opt = ["cvxpy>=1.4", "clarabel>=0.7"]
# Contact/capture truth model (probe-drogue docking)
contact = ["mujoco>=3.2"]
# Interactive 3-D visualization
viz = ["matplotlib>=3.7"]
# High-fidelity cross-validation against established astrodynamics stacks
validate = ["spiceypy>=6.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy>=1.8",
    "ruff>=0.4",
    "hypothesis>=6.90",
    # Layer-0 guidance + plot tests (tests skip gracefully if absent,
    # but CI runs them)
    "cvxpy>=1.4",
    "clarabel>=0.7",
    "matplotlib>=3.7",
    "mujoco>=3.2",
]

[project.urls]
Homepage = "https://github.com/adi-oltean/podium"
Issues = "https://github.com/adi-oltean/podium/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/podium"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "NPY", "PL"]
# The verifiable core deliberately favors explicit loops and scalar math
# over "pythonic" idioms, so silence complexity nags there.
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# UI test harnesses embed JavaScript snippets whose lines don't wrap.
"tools/ui/*" = ["E501"]
# Convex-problem builders are naturally long constructors (one constraint
# family per block); splitting them harms readability.
"src/podium/guidance/convex.py" = ["PLR0912", "PLR0915"]
# cvxpy is imported lazily inside synthesize(): the trusted checker must
# stay importable (and float-free) without the optional SDP stack.
"src/podium/verify/barrier.py" = ["PLC0415"]
# mujoco is imported lazily so the module documents itself without the
# optional contact stack installed.
"src/podium/sim/contact.py" = ["PLC0415"]
# An AST visitor is one dispatch table per node class; splitting it
# obscures the subset definition.
"src/podium/emit/cemit.py" = ["PLR0911", "PLR0912", "PLR0915"]
# cvxpy/cvxpygen imported lazily: generation is a local/offline step and
# cvxpygen's import pulls a Julia sidecar.
"src/podium/emit/solvergen.py" = ["PLC0415"]
# driver generator: one branch per parameter/output form is the clear shape
"src/podium/emit/evagen.py" = ["PLR0912"]
# mission composes the optional stacks (cvxpy, mujoco) lazily; the phase
# controller is one narrative function by design.
"src/podium/sim/mission.py" = ["PLC0415", "PLR0915"]

[tool.mypy]
strict = true
files = ["src/podium"]

# cvxpy ships py.typed with incomplete stubs (cp.norm/cp.sum/solve and the
# is_dcp(dpp=...) signature are missing); silence only those error classes
# in the one module that uses it. Everything else stays strict.
[[tool.mypy.overrides]]
module = "podium.guidance.convex"
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "call-arg", "no-any-return"]

# Same cvxpy stub gaps in the (untrusted) barrier synthesis path; the
# trusted checker half of the module stays fully typed.
[[tool.mypy.overrides]]
module = "podium.verify.barrier"
disallow_untyped_calls = false
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "union-attr", "arg-type", "type-arg"]

[[tool.mypy.overrides]]
module = "podium.guidance.scp"
disallow_untyped_calls = false
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "union-attr", "type-arg"]

[[tool.mypy.overrides]]
module = "podium.guidance.tumbling"
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "union-attr", "type-arg"]

[[tool.mypy.overrides]]
module = "podium.sim.contact"
disable_error_code = ["import-untyped", "type-arg"]

# AST manipulation is stringly/unions-heavy; the emitted-C receipts are
# the correctness gate here, not the annotations.
[[tool.mypy.overrides]]
module = "podium.emit.cemit"
disable_error_code = ["type-arg", "arg-type", "attr-defined",
                      "assignment", "operator", "unused-ignore"]

[[tool.mypy.overrides]]
module = "podium.emit.solvergen"
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "import-untyped", "type-arg"]

[[tool.mypy.overrides]]
module = "podium.sim.mission"
disable_error_code = ["type-arg", "assignment", "operator", "union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "slow: multi-orbit truth-model propagations (deselect with -m 'not slow')",
]
