[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "podium-gnc"
version = "0.7.0"
description = "Podium: physics-precise RPOD (rendezvous, proximity operations & docking) GNC library, simulation sandbox, and visualization for LEO/MEO"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Adi Oltean" }]
keywords = [
    "spacecraft", "rendezvous", "docking", "GNC", "guidance",
    "trajectory-optimization", "clohessy-wiltshire", "simulation",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
# Trajectory optimization (convex / successive convexification) and the
# embedded ECOS solver whose SOCP output the conic-KKT checker re-verifies
opt = ["cvxpy>=1.4", "clarabel>=0.7", "ecos>=2.0"]
# Contact/capture truth model (probe-drogue docking)
contact = ["mujoco>=3.2"]
# Interactive 3-D visualization
viz = ["matplotlib>=3.7"]
# High-fidelity cross-validation against established astrodynamics stacks
# (orekit-jpype needs a JVM; see .github/workflows/validate.yml)
validate = ["spiceypy>=6.0", "orekit-jpype>=13.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "mypy>=1.8",
    "ruff>=0.4",
    "hypothesis>=6.90",
    # Layer-0 guidance + plot tests (tests skip gracefully if absent,
    # but CI runs them)
    "cvxpy>=1.4",
    "clarabel>=0.7",
    "ecos>=2.0",
    "matplotlib>=3.7",
    "mujoco>=3.2",
    # correctly-rounded transcendental oracle (CORE-MATH receipts)
    "mpmath>=1.3",
]

[project.urls]
Homepage = "https://github.com/adi-oltean/podium"
Issues = "https://github.com/adi-oltean/podium/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/podium"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "NPY", "PL"]
# The verifiable core deliberately favors explicit loops and scalar math
# over "pythonic" idioms, so silence complexity nags there.
ignore = ["PLR0913", "PLR2004"]

[tool.ruff.lint.per-file-ignores]
# UI test harnesses embed JavaScript snippets whose lines don't wrap.
"tools/ui/*" = ["E501"]
# Convex-problem builders are naturally long constructors (one constraint
# family per block); splitting them harms readability.
"src/podium/guidance/convex.py" = ["PLR0912", "PLR0915"]
# Same shape for the 6-DOF PTR loop; cvxpy imported lazily; trust-region
# dict iteration mutates values in place (PLC0206 suggestion is wrong)
"src/podium/guidance/sixdof.py" = ["PLR0912", "PLR0915", "PLC0415",
                                   "PLC0206"]
# cvxpy is imported lazily inside synthesize(): the trusted checker must
# stay importable (and float-free) without the optional SDP stack.
"src/podium/verify/barrier.py" = ["PLC0415"]
# The exact KKT checker is one branch per optimality/feasibility case; the
# case analysis is the specification, so splitting it would obscure it.
"src/podium/verify/kkt.py" = ["PLR0912", "PLR0915"]
# mujoco is imported lazily so the module documents itself without the
# optional contact stack installed.
"src/podium/sim/contact.py" = ["PLC0415"]
# An AST visitor is one dispatch table per node class; splitting it
# obscures the subset definition.
"src/podium/emit/cemit.py" = ["PLR0911", "PLR0912", "PLR0915"]
# cvxpy/cvxpygen imported lazily: generation is a local/offline step and
# cvxpygen's import pulls a Julia sidecar.
"src/podium/emit/solvergen.py" = ["PLC0415"]
# mpmath imported lazily so the core stays dependency-free.
"src/podium/emit/croracle.py" = ["PLC0415"]
# scipy.optimize imported lazily so the core stays dependency-free.
"src/podium/control/allocation.py" = ["PLC0415"]
# driver generator: one branch per parameter/output form is the clear shape
"src/podium/emit/evagen.py" = ["PLR0912"]
# org.* packages exist only after orekit initVM — lazy imports required
"tests/test_orekit_validation.py" = ["PLC0415"]
# mission composes the optional stacks (cvxpy, mujoco) lazily; the phase
# controller is one narrative function by design.
"src/podium/sim/mission.py" = ["PLC0415", "PLR0915"]

[tool.mypy]
strict = true
files = ["src/podium"]

# cvxpy ships py.typed with incomplete stubs (cp.norm/cp.sum/solve and the
# is_dcp(dpp=...) signature are missing); silence only those error classes
# in the one module that uses it. Everything else stays strict.
[[tool.mypy.overrides]]
module = "podium.guidance.convex"
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "call-arg", "no-any-return"]

# Same cvxpy stub gaps in the (untrusted) barrier synthesis path; the
# trusted checker half of the module stays fully typed.
[[tool.mypy.overrides]]
module = "podium.verify.barrier"
disallow_untyped_calls = false
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "union-attr", "arg-type", "type-arg"]

[[tool.mypy.overrides]]
module = "podium.guidance.scp"
disallow_untyped_calls = false
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "union-attr", "type-arg"]

[[tool.mypy.overrides]]
module = "podium.guidance.sixdof"
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "union-attr", "type-arg",
                      "operator", "arg-type"]

[[tool.mypy.overrides]]
module = "podium.guidance.tumbling"
disallow_untyped_calls = false
disable_error_code = ["attr-defined", "union-attr", "type-arg"]

[[tool.mypy.overrides]]
module = "podium.sim.contact"
disable_error_code = ["import-untyped", "type-arg"]

# AST manipulation is stringly/unions-heavy; the emitted-C receipts are
# the correctness gate here, not the annotations.
[[tool.mypy.overrides]]
module = "podium.emit.cemit"
disable_error_code = ["type-arg", "arg-type", "attr-defined",
                      "assignment", "operator", "unused-ignore"]

[[tool.mypy.overrides]]
module = "podium.emit.solvergen"
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "import-untyped", "type-arg"]

[[tool.mypy.overrides]]
module = "podium.sim.mission"
disable_error_code = ["type-arg", "assignment", "operator", "union-attr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
markers = [
    "slow: multi-orbit truth-model propagations (deselect with -m 'not slow')",
]
